# hex_protocol

./: README.md
sequencer/: .gitignore  Cargo.toml
sequencer/program/: Cargo.toml
sequencer/program/src/: main.rs
sequencer/src/: main.rs
sequencer/src/engine/: orderbook.rs
sequencer/src/prover/: mod.rs  zk_client.rs
sequencer/src/rpc/: websocket.rs
