[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tokio is the industry standard for asynchronous programming in Rust. 
# We need it for handling WebSockets and non-blocking channels later.
tokio = { version = "1.36", features = ["full"] }

# Serde is used to serialize and deserialize data. 
# We will need this to parse incoming JSON orders from the Next.js frontend.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"