[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tokio is the industry standard for asynchronous programming in Rust. 
# We need it for handling WebSockets and non-blocking channels later.
tokio = { version = "1.36", features = ["full"] }

# Serde is used to serialize and deserialize data. 
# We will need this to parse incoming JSON orders from the Next.js frontend.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7.5", features = ["ws", "macros"] }
futures = "0.3"

sp1-sdk = "3.0.0" 
bincode = "1.3.3"
sha2 = "0.10.8"
k256 = { version = "0.13.3", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["std"] }
ethers = "2.0"