[package]
name = "hex-program"
version = "0.1.0"
edition = "2021"

[dependencies]
# The core library that allows this code to run inside the RISC-V zkVM
sp1-zkvm = "3.0.0"

# We use bincode for ultra-fast, memory-efficient binary unpacking
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"